make add button smaller fix edit issue where check box wasnt checking as expected

--- a/RosterChallenge/wwwroot/css/Roster.css
+++ b/RosterChallenge/wwwroot/css/Roster.css
@@ -14,14 +14,14 @@ table {
 
     display: inline-block;
     font-weight: bold;
-    font-size: 22px;
+    font-size: 20px;
     width: 170px;
     display: inline-block;
 }
 
 .plusButton {
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     background-color: #4cba02;
     border-radius: 50%;
     font-weight: bold;
